# gaia-gmn

./: Cargo.toml  README.md
.github/workflows/: ci.yml
capture/: Cargo.toml  Containerfile
capture/src/: capture.rs  compression.rs  main.rs  server.rs
common/: Cargo.toml
common/src/: config.rs  discovery.rs  ff.rs  lib.rs
web/: Cargo.toml  Containerfile
web/src/: app.rs  lib.rs  main.rs  model.rs  server_fns.rs
web/src/components/: detection_row.rs  file_list.rs  live_preview.rs  mod.rs  night_card.rs  station_card.rs  status_card.rs
web/src/pages/: capture.rs  detections.rs  home.rs  mod.rs  night_detail.rs  nights.rs
web/src/server/: db.rs  fs.rs  mod.rs
web/style/: main.css
