[workspace]
members = ["common", "capture", "web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
# Shared across crates
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Leptos (web UI)
leptos = "0.6"
leptos_router = "0.6"
leptos_meta = "0.6"
leptos_axum = "0.6"
cfg-if = "1"

# Image (for live.jpg encoding)
image = "0.25"

# mDNS
mdns-sd = "0.18"
if-addrs = "0.13"

# Config
byteorder = "1"

# Other
ctrlc = { version = "3.4", features = ["termination"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
