[package]
name = "gaia-gmn-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gaia-gmn-capture"
path = "src/main.rs"

[dependencies]
gaia-gmn-common = { path = "../common" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
image.workspace = true
ctrlc.workspace = true
rand.workspace = true
