[package]
name = "gaia-gmn-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gaia-gmn-web"
path = "src/main.rs"

[dependencies]
# ── Core Leptos ──────────────────────────────────────────────
leptos        = { workspace = true }
leptos_router = { workspace = true }
leptos_meta   = { workspace = true }

# ── Shared (compiled for both native + wasm) ────────────────
serde      = { workspace = true }
serde_json = { workspace = true }
cfg-if     = { workspace = true }

# ── SSR-only deps (server binary) ───────────────────────────
leptos_axum         = { workspace = true, optional = true }
axum                = { version = "0.7", optional = true }
tokio               = { workspace = true, optional = true }
tower               = { version = "0.4", optional = true }
tower-http          = { version = "0.5", features = ["fs", "cors"], optional = true }
tracing             = { workspace = true, optional = true }
tracing-subscriber  = { workspace = true, optional = true }
chrono              = { version = "0.4", features = ["serde"], optional = true }
reqwest             = { version = "0.12", features = ["json"], optional = true }
rusqlite            = { version = "0.32", features = ["bundled"], optional = true }
anyhow              = { version = "1", optional = true }

# ── Hydrate-only deps (WASM client) ─────────────────────────
wasm-bindgen              = { version = "0.2", optional = true }
console_error_panic_hook  = { version = "0.1", optional = true }
web-sys                   = { version = "0.3", features = ["Window"], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos_router/hydrate",
    "leptos_meta/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:chrono",
    "dep:reqwest",
    "dep:rusqlite",
    "dep:anyhow",
]

[package.metadata.leptos]
output-name     = "gaia-gmn-web"
site-root       = "target/site"
site-pkg-dir    = "pkg"
style-file      = "style/main.css"
assets-dir      = "public"
site-addr       = "0.0.0.0:8180"
reload-port     = 8182
browserquery    = "defaults"
watch-additional-files = ["style"]
env             = "DEV"
bin-features    = ["ssr"]
bin-default-features  = false
lib-features    = ["hydrate"]
lib-default-features  = false
